apps/shisha-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shisha-frontend
  namespace: shisha-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shisha-frontend
  template:
    metadata:
      labels:
        app: shisha-frontend
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: shisha-frontend
          image: harbor.api-api-api.com/shisha/frontend:main-22-efa6806981a9e8025d81b8d7e8e167f20557bba9 # {"$imagepolicy": "flux-system:shisha-frontend"}
          ports:
            - containerPort: 80
