apps/shisha-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shisha-frontend
  namespace: shisha-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: shishaguid.api-api-api.com
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - shishaguid.api-api-api.com
      secretName: shisha-frontend-tls
  rules:
    - host: shishaguid.api-api-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shisha-frontend
                port:
                  number: 80
